k8s/userservice.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userservice
  template:
    metadata:
      labels:
        app: userservice
    spec:
      containers:
      - name: userservice
        image: acruitgoprod.azurecr.io/userservice:v3 # CI/CD sẽ thay
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: userservice
spec:
  type: ClusterIP # Service này sẽ có IP nội bộ để truy cập từ các Pod khác
  ports:
  - port: 80 # Cổng public
    targetPort: 8000 # Cổng container
  selector:
    app: userservice
